--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
   <meta charset="utf-8">
   <title>Styles Conference</title>
   <link rel="stylesheet" href="assets/stylesheets/main.css">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
 </head>
 
 <body>
-  <header class="container">
-    <h1>
-      <a href="index.html">Styles Conference</a>
+  <header class="container group">
+    <h1 class="logo">
+      <a href="index.html">Styles
+        <br> Conference</a>
     </h1>
-    <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
-    <nav>
+    <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
+    <nav class="nav primary-nav">
       <a href="index.html">Home</a>
       <a href="speakers.html">Speakers</a>
       <a href="schedule.html">Schedule</a>
@@ -29,42 +31,47 @@
     <a href="register.html" class="btn btn-alt">Register Now</a>
   </section>
 
-  <section class="container">
-    <section>
+  <section class="grid">
+    <!-- Speakers -->
+    <section class="teaser col-1-3">
       <a href="speakers.html">
         <h5>Speakers</h5>
         <h3>World-Class Speakers</h3>
       </a>
       <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.
       </p>
-    </section>
-    <section>
+    </section><!--
+
+      Schedule
+
+    --><section class="teaser col-1-3">
       <a href="schedule.html">
         <h5>Schedule</h5>
         <h3>Three Inspiring Days</h3>
       </a>
       <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
-    </section>
-    <section>
+    </section><!--
+
+  Venue
+
+  --><section class="teaser col-1-3">
       <a href="venue.html">
         <h5>Venue</h5>
         <h3>The Chicago Theatre</h3>
       </a>
-      <p>Within the heart of downtown CHicago, The Chicageo Theatre will provide a beautiful conference
-        venue.
-      </p>
+      <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
     </section>
   </section>
 
-  <footer class="container">
-    <nav>
+  <footer class="primary-footer container group">
+    <small>&copy; Styles Conference</small>
+    <nav class="nav">
       <a href="index.html">Home</a>
       <a href="speakers.html">Speakers</a>
       <a href="schedule.html">Schedule</a>
       <a href="venue.html">Venue</a>
       <a href="register.html">Register</a>
     </nav>
-    <small>&copy; Styles Conference</small>
   </footer>
 </body>
 
