--- a/index.html
+++ b/index.html
@@ -9,18 +9,38 @@
 </head>
 
 <body>
-  <header class="container group">
+  <header class="primary-header container group">
     <h1 class="logo">
       <a href="index.html">Styles
         <br> Conference</a>
     </h1>
     <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
     <nav class="nav primary-nav">
-      <a href="index.html">Home</a>
-      <a href="speakers.html">Speakers</a>
-      <a href="schedule.html">Schedule</a>
-      <a href="venue.html">Venue</a>
-      <a href="register.html">Register</a>
+      <ul>
+        <li>
+          <a href="index.html">Home</a>
+        </li>
+        <!--
+              -->
+        <li>
+          <a href="speakers.html">Speakers</a>
+        </li>
+        <!--
+              -->
+        <li>
+          <a href="schedule.html">Schedule</a>
+        </li>
+        <!--
+              -->
+        <li>
+          <a href="venue.html">Venue</a>
+        </li>
+        <!--
+              -->
+        <li>
+          <a href="register.html">Register</a>
+        </li>
+      </ul>
     </nav>
   </header>
 
@@ -31,46 +51,69 @@
     <a href="register.html" class="btn btn-alt">Register Now</a>
   </section>
 
-  <section class="grid">
-    <!-- Speakers -->
-    <section class="teaser col-1-3">
-      <a href="speakers.html">
+  <section class="row">
+    <div class="grid">
+      <!-- Speakers -->
+      <section class="teaser col-1-3">
         <h5>Speakers</h5>
-        <h3>World-Class Speakers</h3>
-      </a>
-      <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.
-      </p>
-    </section><!--
+        <a href="speakers.html">
+          <img src="assets/images/home/speakers.jpg" alt="Professional Speaker">
+          <h3>World-Class Speakers</h3>
+        </a>
+        <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.
+        </p>
+      </section><!--
 
-      Schedule
+        Schedule
+
+      --><section class="teaser col-1-3">
+        <a href="schedule.html">
+          <h5>Schedule</h5>
+          <h3>Three Inspiring Days</h3>
+        </a>
+        <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
+      </section><!--
+
+    Venue
 
     --><section class="teaser col-1-3">
-      <a href="schedule.html">
-        <h5>Schedule</h5>
-        <h3>Three Inspiring Days</h3>
-      </a>
-      <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
-    </section><!--
-
-  Venue
-
-  --><section class="teaser col-1-3">
-      <a href="venue.html">
-        <h5>Venue</h5>
-        <h3>The Chicago Theatre</h3>
-      </a>
-      <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
-    </section>
+        <a href="venue.html">
+          <h5>Venue</h5>
+          <h3>The Chicago Theatre</h3>
+        </a>
+        <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
+      </section>
+    </div>
   </section>
 
   <footer class="primary-footer container group">
     <small>&copy; Styles Conference</small>
     <nav class="nav">
-      <a href="index.html">Home</a>
-      <a href="speakers.html">Speakers</a>
-      <a href="schedule.html">Schedule</a>
-      <a href="venue.html">Venue</a>
-      <a href="register.html">Register</a>
+      <ul>
+        <li>
+          <a href="index.html">Home</a>
+        </li>
+        <!--
+              -->
+        <li>
+          <a href="speakers.html">Speakers</a>
+        </li>
+        <!--
+              -->
+        <li>
+          <a href="schedule.html">Schedule</a>
+        </li>
+        <!--
+              -->
+        <li>
+          <a href="venue.html">Venue</a>
+        </li>
+        <!--
+              -->
+        <li>
+          <a href="register.html">Register</a>
+        </li>
+      </ul>
     </nav>
   </footer>
 </body>
