--- a/speakers.html
+++ b/speakers.html
@@ -69,7 +69,7 @@
         </div><!--
         --><aside class="col-1-3">
           <div class="speaker-info">
-
+            <img src="assets/images/speakers/aaron-irizarry.jpg" alt="Aaron Irizarry">
             <ul>
               <li>
                 <a href="https://twitter.com/aaroni">@aaroni</a>
@@ -119,7 +119,7 @@
 
         --><aside class="col-1-3">
           <div class="speaker-info">
-
+            <img src="assets/images/speakers/adam-connor.jpg" alt="Adam Connor">
             <ul>
               <li>
                 <a href="https://twitter.com/adamconnor">@adamconnor</a>
@@ -157,7 +157,7 @@
 
                 --><aside class="col-1-3">
           <div class="speaker-info">
-
+            <img src="assets/images/speakers/aj-self.jpg" alt="AJ Self">
             <ul>
               <li>
                 <a href="https://twitter.com/ajself">@ajself</a>
@@ -196,7 +196,7 @@
         </div><!--
         --><aside class="col-1-3">
           <div class="speaker-info">
-
+            <img src="assets/images/speakers/arman-ghosh.jpg" alt="Arman Ghosh">
             <ul>
               <li>
                 <a href="https://twitter.com/armanghosh">@armanghosh</a>
@@ -233,7 +233,7 @@
         </div><!--
         --><aside class="col-1-3">
           <div class="speaker-info">
-
+            <img src="assets/images/speakers/bermon-painter.jpg" alt="Bermon Painter">
             <ul>
               <li>
                 <a href="https://twitter.com/bermonpainter">@bermonpainter</a>
@@ -282,7 +282,7 @@
         </div><!--
         --><aside class="col-1-3">
           <div class="speaker-info">
-
+            <img src="assets/images/speakers/brad-smith.jpg" alt="Brad Smith">
             <ul>
               <li>
                 <a href="http://www.webvisionsevent.com/">webvisionsevent.com</a>
@@ -318,13 +318,11 @@
             mentoring college students about the front-end side of the web. She also enjoys participating in
             hackathons with other co-workers and students.</p>
 
-        </div>
-        <!--
+        </div><!--
 
-                -->
-        <aside class="col-1-3">
+        --><aside class="col-1-3">
           <div class="speaker-info">
-
+            <img src="assets/images/speakers/candi-lemoine.jpg" alt="Candi Lemoine">
             <ul>
               <li>
                 <a href="https://twitter.com/candicodeit">@candicodeit</a>
@@ -364,13 +362,10 @@
             <cite>A Project Guide to UX Design</cite> and
             <cite>Adventures in Experience Design</cite>.</p>
 
-        </div>
-        <!--
-
-                -->
-        <aside class="col-1-3">
+        </div><!--
+        --><aside class="col-1-3">
           <div class="speaker-info">
-
+            <img src="assets/images/speakers/carolyn-chandler.jpg" alt="Carolyn Chandler">
             <ul>
               <li>
                 <a href="https://twitter.com/chanan">@chanan</a>
@@ -406,13 +401,10 @@
             Firefox OS and related subjects. He loves tinkering around with HTML, CSS, JavaScript and other
             web technologies, and gives occasional tech talks at conferences and universities.</p>
 
-        </div>
-        <!--
-
-                -->
-        <aside class="col-1-3">
+        </div><!--
+        --><aside class="col-1-3">
           <div class="speaker-info">
-
+            <img src="assets/images/speakers/chris-mills.jpg" alt="Chris Millis">
             <ul>
               <li>
                 <a href="https://twitter.com/chrisdavidmills">@chrisdavidmills</a>
@@ -446,13 +438,10 @@
             called a &#8220;seriously good copy and paster&#8221; and he puts those skills to use as he spends
             his days learning, unlearning and relearning how to build things for the web.</p>
 
-        </div>
-        <!--
-
-                -->
-        <aside class="col-1-3">
+        </div><!--
+        --><aside class="col-1-3">
           <div class="speaker-info">
-
+            <img src="assets/images/speakers/dan-denney.jpg" alt="Dan Denney">
             <ul>
               <li>
                 <a href="https://twitter.com/dandenney">@dandenney</a>
@@ -491,13 +480,10 @@
             on Twitter at
             <a href="https://twitter.com/darbyfrey">@darbyfrey</a>.</p>
 
-        </div>
-        <!--
-
-                -->
-        <aside class="col-1-3">
+        </div><!--
+        --><aside class="col-1-3">
           <div class="speaker-info">
-
+            <img src="assets/images/speakers/darby-frey.jpg" alt="Darby Frey">
             <ul>
               <li>
                 <a href="https://twitter.com/darbyfrey">@darbyfrey</a>
@@ -541,13 +527,10 @@
             engaging digital experiences for Fortune 500 companies, non-profits, and upcoming companies alike,
             and is currently writing this bio while referring to herself in the third person.</p>
 
-        </div>
-        <!--
-
-                -->
-        <aside class="col-1-3">
+        </div><!--
+        --><aside class="col-1-3">
           <div class="speaker-info">
-
+            <img src="assets/images/speakers/erica-decker.jpg" alt="Erica Decker">
             <ul>
               <li>
                 <a href="http://ericadecker.com/">ericadecker.com</a>
@@ -591,13 +574,10 @@
             <a href="http://www.standardista.com/">Standardista</a>. Her tutorials and workshops are available on
             <a href="http://estelle.github.io/">GitHub</a>.</p>
 
-        </div>
-        <!--
-
-                -->
-        <aside class="col-1-3">
+        </div><!--
+        --><aside class="col-1-3">
           <div class="speaker-info">
-
+            <img src="assets/images/speakers/estelle-weyl.jpg" alt="Estelle Weyl">
             <ul>
               <li>
                 <a href="https://twitter.com/estellevw">@estellevw</a>
@@ -636,13 +616,10 @@
             chapter. She speaks regularly about design, development and diversity, and focuses on finding new
             ways to make both technology and technology education accessible to everyone.</p>
 
-        </div>
-        <!--
-
-                -->
-        <aside class="col-1-3">
+        </div><!--
+        --><aside class="col-1-3">
           <div class="speaker-info">
-
+            <img src="assets/images/speakers/jen-myers.jpg" alt="Jen Myers">
             <ul>
               <li>
                 <a href="https://twitter.com/antiheroine">@antiheroine</a>
@@ -680,13 +657,10 @@
 
           <p>Outside of loving the web, Jenn is a songwriter and loves Rock and Roll!</p>
 
-        </div>
-        <!--
-
-                -->
-        <aside class="col-1-3">
+        </div><!--
+        --><aside class="col-1-3">
           <div class="speaker-info">
-
+            <img src="assets/images/speakers/jenn-downs.jpg" alt="Jenn Downs">
             <ul>
               <li>
                 <a href="https://twitter.com/beparticular">@beparticular</a>
@@ -727,7 +701,7 @@
         </div><!--
         --><aside class="col-1-3">
           <div class="speaker-info">
-
+            <img src="assets/images/speakers/jennifer-jones.jpg" alt="Jennier Jones">
             <ul>
               <li>
                 <a href="https://twitter.com/Foerocious">@foerocious</a>
@@ -777,7 +751,7 @@
         </div><!--
         --><aside class="col-1-3">
           <div class="speaker-info">
-
+            <img src="assets/images/speakers/leslie-jensen-inman.jpg" alt="Leslie Jensen Inman">
             <ul>
               <li>
                 <a href="https://twitter.com/jenseninman">@jenseninman</a>
@@ -822,7 +796,7 @@
         </div><!--
         --><aside class="col-1-3">
           <div class="speaker-info">
-
+            <img src="assets/images/speakers/maya-bruck.jpg" alt="Maya Bruck">
             <ul>
               <li>
                 <a href="https://twitter.com/mayabruck">@mayabruck</a>
@@ -876,7 +850,7 @@
         </div><!--
         --><aside class="col-1-3">
           <div class="speaker-info">
-
+            <img src="assets/images/speakers/russ-unger.jpg" alt="Russ Unger">
             <ul>
               <li>
                 <a href="https://twitter.com/russu">@russu</a>
@@ -913,7 +887,7 @@
         </div><!--
         --><aside class="col-1-3">
           <div class="speaker-info">
-
+            <img src="assets/images/speakers/shay-howe.jpg" alt="Shay Howe">
             <ul>
               <li>
                 <a href="https://twitter.com/shayhowe">@shayhowe</a>
@@ -952,7 +926,7 @@
         </div><!--
         --><aside class="col-1-3">
           <div class="speaker-info">
-
+            <img src="assets/images/speakers/tessa-harmon.jpg" alt="Tessa Harmon">
             <ul>
               <li>
                 <a href="https://twitter.com/tessaharmon">@tessaharmon</a>
@@ -994,7 +968,7 @@
         </div><!--
         --><aside class="col-1-3">
           <div class="speaker-info">
-
+            <img src="assets/images/speakers/victoria-pater.jpg" alt="Victoria Pater">
             <ul>
               <li>
                 <a href="https://twitter.com/typeis4lovers">@typeis4lovers</a>
@@ -1038,7 +1012,7 @@
         </div><!--
         --><aside class="col-1-3">
           <div class="speaker-info">
-
+            <img src="assets/images/speakers/vitaly-friedman.jpg" alt="Vitaly Friedman">
             <ul>
               <li>
                 <a href="https://twitter.com/smashingmag">@smashingmag</a>
@@ -1093,7 +1067,7 @@
         </div><!--
         --><aside class="col-1-3">
           <div class="speaker-info">
-
+            <img src="assets/images/speakers/zoe-mickley-gillenwater.jpg" alt="Zoe Mickley Gillenwater">
             <ul>
               <li>
                 <a href="https://twitter.com/zomigi">@zomigi</a>
