--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
         Schedule
 
       --><section class="teaser col-1-3">
+        <h5>Schedule</h5>
         <a href="schedule.html">
-          <h5>Schedule</h5>
+          <img src="assets/images/home/schedule.jpg" alt="Schedule">
           <h3>Three Inspiring Days</h3>
         </a>
         <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
@@ -77,8 +78,9 @@
     Venue
 
     --><section class="teaser col-1-3">
+        <h5>Venue</h5>
         <a href="venue.html">
-          <h5>Venue</h5>
+          <img src="assets/images/home/venue.jpg" alt="Chicago Theatre">
           <h3>The Chicago Theatre</h3>
         </a>
         <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
