--- a/venue.html
+++ b/venue.html
@@ -35,6 +35,36 @@
     </div>
   </section>
 
+  <section class="row">
+    <div class="grid">
+      <section class="venue-theatre">
+        <div class="col-1-3">
+          <h2>Chicago Theatre</h2>
+          <p>175 N State St
+            <br> Chicago, IL 60601</p>
+          <p>
+            <a href="http://www.thechicagotheatre.com/">thechicagotheatre.com</a>
+            <br> (312) 462-6300</p>
+        </div><!--
+        --><iframe class="venue-map col-2-3" src="https://www.google.com/maps/embed?pb=!1m5!3m3!1m2!1s0x880e2ca55810a493%3A0x4700ddf60fcbfad6!2schicago+theatre!5e0!3m2!1sen!2sus!4v1388701393606"></iframe>
+      </section>
+
+      <section class="venue-hotel">
+        <div class="col-1-3">
+          <h2>Hotel Chicago</h2>
+          <p>333 N. Dearborn
+            <br> Chicago, IL 60654</p>
+          <p>
+            <a href="http://www.thehotelchicago.com/">thehotelchicago.com</a>
+            <br> (312) 245-0333
+          </p>
+        </div><!--
+        --><iframe class="venue-map col-2-3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2970.2050445232135!2d-87.62998196302794!3d41.88844718531006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2cae21a12625%3A0x277f22d4b64d5732!2sHotel+Chicago+Downtown%2C+Autograph+Collection!5e0!3m2!1sen!2sca!4v1531684731710"></iframe>
+      </section>
+    </div>
+  </section>
+
+
   <footer class="primary-footer container group">
     <small>&copy; Styles Conference</small>
     <nav class="nav">
